<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.runningGUI.user.UserActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/profileUserNameTextView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:text="@string/userName"/>
    <Button
            android:text="@string/buttonProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/buttonProfile" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/profileUserNameTextView" android:onClick="onClickProfile"/>
    <Button
            android:text="@string/buttonHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/buttonHistory" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonProfile" android:onClick="onClickStartHistory"/>
    <Button
            android:text="@string/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/buttonStart" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonHistory" android:onClick="onClickStartRun"/>
    <Switch
            android:text="@string/switchRunDetection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/runDetectionSwitch"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/buttonStart"
    />
</androidx.constraintlayout.widget.ConstraintLayout>