<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.runningGUI.profil.ProfileActivity">

    <TextView
            android:text="@string/userProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/profileUserNameTextView"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/profileLabelNameTextView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/profileTextViewLabelId"/>
    <TextView
            android:text="@string/labelAnzahlRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/proflieLabelAnzahlTextView"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/profileLabelNameTextView"/>
    <Button
            android:text="@string/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/profileButtonDelete"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:onClick="onClickDeleteButton"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/profileTextViewAnzahl"
            app:layout_constraintStart_toEndOf="@+id/proflieLabelAnzahlTextView" android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/proflieLabelAnzahlTextView"/>
    <TextView
            android:text="@string/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/profileTextViewName"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/profileTextViewAnzahl"
            app:layout_constraintStart_toStartOf="@+id/profileTextViewAnzahl"/>
    <TextView
            android:text="@string/labelUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/profileTextViewLabelId"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/profileUserNameTextView"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/profileTextViewId"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/profileTextViewName"
            app:layout_constraintStart_toStartOf="@+id/profileTextViewName"/>
</androidx.constraintlayout.widget.ConstraintLayout>