<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.runningGUI.run.RunActivity">

    <TextView
            android:text="@string/labelDauer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/runTextViewLabelDauer" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/buttonFertig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/runButtonFertig" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/runTextViewLabelDistanz" android:onClick="onClickFertig"/>
    <TextView
            android:text="@string/labelDistanz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/runTextViewLabelDistanz" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/runTextViewLabelDauer"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/runTextViewDauer"
            app:layout_constraintStart_toEndOf="@+id/runTextViewLabelDauer" android:layout_marginStart="64dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/runTextViewDistanz"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/runTextViewDauer"
            app:layout_constraintStart_toStartOf="@+id/runTextViewDauer"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/runTextViewIsRunning"
            app:layout_constraintStart_toEndOf="@+id/runTextViewDauer" android:layout_marginStart="64dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:text="@string/rundec"/>
    <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/runButtonSave"
            app:layout_constraintStart_toEndOf="@+id/runButtonFertig"
            app:layout_constraintTop_toTopOf="@+id/runButtonFertig" android:layout_marginStart="32dp"
            android:onClick="onClickSave"/>
</androidx.constraintlayout.widget.ConstraintLayout>