<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.runningGUI.start.StartActivity">

    <TextView
            android:text="@string/willkommen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/startWelcomeTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/user_wählen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/startSelectTextView"
            app:layout_constraintTop_toBottomOf="@+id/startWelcomeTextView" android:layout_marginTop="24dp"/>
    <fragment
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:name="gmba.runningapp.view.runningGUI.start.UserFragment"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/fragment" app:layout_constraintTop_toBottomOf="@+id/startSelectTextView"
            android:layout_marginTop="32dp" tools:layout="@layout/fragment_user_list"/>
    <Button
            android:text="@string/buttonCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonCreate"
            app:layout_constraintTop_toBottomOf="@+id/fragment" android:layout_marginTop="16dp"
            android:onClick="onClickCreate" android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/createUserEditText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonCreate"
            app:layout_constraintTop_toBottomOf="@+id/fragment" android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp" android:hint="@string/createUserEdit"/>
</androidx.constraintlayout.widget.ConstraintLayout>